--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ repositories {
 
 
 dependencies {
+	compile('javax.xml.bind:jaxb-api:2.3.0')
 	compile('org.springframework.boot:spring-boot-starter')
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
