--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,12 @@ dependencies {
 	compile('io.springfox:springfox-swagger2:2.6.1')
 	compile('org.apache.commons:commons-lang3:3.6')
 	compile('org.springframework.session:spring-session-core')
-	compile("com.h2database:h2")
+	compile('com.h2database:h2')
+
+	//dependencies used for rendering only
+	compile('org.thymeleaf:thymeleaf-spring5:3.0.9.RELEASE')
+	compile('org.thymeleaf:thymeleaf:3.0.9.RELEASE')
+
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('com.microsoft.sqlserver:mssql-jdbc')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
