--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 logging.level.org.springframework.web=DEBUG
+spring.thymeleaf.cache=false
