--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,1 +1,1 @@
-spring.datasource.url=spring.datasource.url=jdbc:h2:~/upwisetestdata;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:~/upwisetestdata;DB_CLOSE_ON_EXIT=FALSE
