Blanking local properties for now and having the app always use file-based H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 logging.level.org.springframework.web=DEBUG
 spring.thymeleaf.cache=false
-spring.datasource.url=jdbc:h2:mem:upwise
+spring.datasource.url=jdbc:h2:~/upwisetestdata;DB_CLOSE_ON_EXIT=FALSE
