--- a/build.gradle
+++ b/build.gradle
@@ -53,11 +53,11 @@ repositories {
 
 dependencies {
 	compile('javax.xml.bind:jaxb-api:2.3.0')
-	compile('org.springframework.boot:spring-boot-starter')
-	compile('org.springframework.boot:spring-boot-starter-actuator')
+	//compile('org.springframework.boot:spring-boot-starter')
+	//compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-data-rest')
-	compile('org.springframework.boot:spring-boot-starter-jdbc')
+	//compile('org.springframework.boot:spring-boot-starter-data-rest')
+	//compile('org.springframework.boot:spring-boot-starter-jdbc')
 	//compile('org.springframework.boot:spring-boot-starter-security')	//	Didn't wanna sign in to test
 	compile('org.springframework.boot:spring-boot-starter-web')
 	//compile('com.ford.cloudnative:activedirectory-spring-oauth2-client:1.1.2-RELEASE')	//Need a real app for this
