--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.h2.console.settings.web-allow-others=true
 logging.level.org.springframework.web=DEBUG
 spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:h2:~/upwisetestdata;DB_CLOSE_ON_EXIT=FALSE
+spring.application.name=Upwise
