Add a Log Out button to the navbar that hits /logout and only appears if you're logged in.  Also add a landing page for after logging out.

--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,7 @@ apply plugin: 'cf-app'
 cfConfig {
 
 	// See GettingStarted.md for information on updating these values
-	ccHost = "api.yourpcf.cf.ford.com" // Change
+	ccHost = "api.upwise.cfapps.io" // Change
 	space = "YOUR_SPACE" // Change
 	org = "YOUR_ORG" // Change
 
