--- a/build.gradle
+++ b/build.gradle
@@ -53,16 +53,10 @@ repositories {
 
 dependencies {
 	compile('javax.xml.bind:jaxb-api:2.3.0')
-	//compile('org.springframework.boot:spring-boot-starter')
-	//compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	//compile('org.springframework.boot:spring-boot-starter-data-rest')
-	//compile('org.springframework.boot:spring-boot-starter-jdbc')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.security:spring-security-test')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	//compile('com.ford.cloudnative:activedirectory-spring-oauth2-client:1.1.2-RELEASE')	//Need a real app for this
-	//compile('com.ford.cloudnative:activedirectory-spring-oauth2-service:1.1.1-RELEASE')	//Need a real app for this
 	compile('io.springfox:springfox-swagger-ui:2.6.1')
 	compile('io.springfox:springfox-swagger2:2.6.1')
 	compile('org.apache.commons:commons-lang3:3.6')
@@ -74,8 +68,11 @@ dependencies {
 	compile('org.thymeleaf:thymeleaf:3.0.9.RELEASE')
 	compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4')
 
+	//runtimes
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('com.microsoft.sqlserver:mssql-jdbc')
+
+	//test stuff
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.rest-assured:rest-assured:3.0.7')
 	testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
