--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,4 @@ logging.level.org.springframework.web=ERROR
 spring.datasource.url=jdbc:mysql://localhost/upwise?autoreconnect=true
 spring.datasource.username=root
 spring.datasource.password=root
+spring.jpa.generate-ddl=true
