AnalyticsService now responsible for validation (not controller); whether to save analytics for anonymous actions is now a property flag on the service [https://trello.com/c/GlwyBAVa]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ logging.level.org.springframework.web=DEBUG
 spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:h2:mem:upwisetestdata;DB_CLOSE_ON_EXIT=FALSE
 spring.application.name=Upwise
+
+upwise.analytics.record.anonymous=true
