--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost/upwise?autoreconnect=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.generate-ddl=true
+
+upwise.analytics.record.anonymous=false
