--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,8 @@ applications:
 - name: upwise
   path: ./build/libs/upwise-0.0.1-SNAPSHOT.jar
   memory: 768M
-  buildpack: java_buildpack
+  buildpacks:
+    - java_buildpack
+  stack: cflinuxfs3
   services:
     - upwisedb
